Incorporated Bootstrap navbar and a FAQ page. It will have a FAQ telling the user what makes the input work.

--- a/faq.html
+++ b/faq.html
@@ -14,25 +14,17 @@
       <h2>A interactive JavaScript</h2>
       <div role = "navigation">
         <ul class = "nav nav-tabs">
-          <li role="presentation" class = "active">
+          <li role="presentation">
             <a href="index.html"><b class="glyphicon glyphicon-home"></b>Home</a>
           </li>
-          <li role="presentation">
+          <li role="presentation" class = "active">
             <a href="faq.html"><b class="glyphicon glyphicon-home"></b>How does it work?</a>
           </li>
         </ul>
       </div>
-    <div class="container">
-      <form class="for-group" type="text" id="pinput">
-        <label for="ptext">Enter Number here to get a return Value</label>
-        <input type="number" id="pnum">
-        <button type="submit" class="btn btn-primary button">Submit</button>
-      </form>
-    </div>
-    <div class="container">
-      <ul id="results">
+      <div class = "container">
 
-      </ul>
-    </div>
+      </div>
+    </header>
   </body>
 </html>
