Reworked JavaScript still not functioning with outputs. It will have a functioning output list.

--- a/faq.html
+++ b/faq.html
@@ -15,15 +15,18 @@
       <div role = "navigation">
         <ul class = "nav nav-tabs">
           <li role="presentation">
-            <a href="index.html"><b class="glyphicon glyphicon-home"></b>Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li role="presentation" class = "active">
-            <a href="faq.html"><b class="glyphicon glyphicon-home"></b>How does it work?</a>
+            <a href="faq.html">How does it work?</a>
           </li>
         </ul>
       </div>
       <div class = "container">
-
+        <div class="jumbotron">
+          <h1> How do I work?</h1>
+          <p>When inputing a value a script will run and either export a value or a word depending on the input. If your inputted number is divisible by 3, 5, or 15 the script will export Ping, Pong or Pingpong.</p>
+        </div>
       </div>
     </header>
   </body>
