--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <div role = "navigation">
         <ul class = "nav nav-tabs">
           <li role="presentation" class = "active">
-            <a href="index.html"><b class="glyphicon glyphicon-home"></b>Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li role="presentation">
-            <a href="faq.html"><b class="glyphicon glyphicon-home"></b>How does it work?</a>
+            <a href="faq.html">How does it work?</a>
           </li>
         </ul>
       </div>
