Made an edit to FAQ to allow for better clarification.

--- a/faq.html
+++ b/faq.html
@@ -25,7 +25,7 @@
       <div class = "container">
         <div class="jumbotron">
           <h1> How do I work?</h1>
-          <p>When inputing a value a script will run and either export a value or a word depending on the input. If your inputted number is divisible by 3, 5, or 15 the script will export Ping, Pong or Pingpong.</p>
+          <p>When inputing a value a script will run and either export a value or a word depending on the input. If your inputted number is divisible by 3, 5, or 15 the script will export Ping, Pong or Pingpong. If a number like 30 is the input value it will go up to 30 and define every number.</p>
         </div>
       </div>
     </header>
