Edited FAQ to allow for a better understanding of what the functions are doing.

--- a/faq.html
+++ b/faq.html
@@ -26,6 +26,12 @@
         <div class="jumbotron">
           <h1> How do I work?</h1>
           <p>When inputing a value a script will run and either export a value or a word depending on the input. If your inputted number is divisible by 3, 5, or 15 the script will export Ping, Pong or Pingpong. If a number like 30 is the input value it will go up to 30 and define every number.</p>
+          <h2> Rules:</h2>
+          <ul>
+            <li>Numbers divisible by 3 are replaced with "ping"</li>
+            <li>Numbers divisible by 5 are replaced with "pong"</li>
+            <li>Numbers divisible by 15 are replaced with "pingpong"</li>
+          </ul>
         </div>
       </div>
     </header>
